source/features/clean-repo-sidebar.css
[rgh-clean-repo-sidebar] {
	/* Hide "About" header */
	.Layout-sidebar .BorderGrid-row:first-child h2 {
		display: none;
	}

	/* Hide "Packages" if empty */
	.BorderGrid-row:has(a[href*='/packages?repo_name'] .Counter[title='0']) {
		display: none;
	}

	/* Align the top of the repo root sidebar with the main page content */
	.Layout-sidebar .BorderGrid-row:first-child h2 + p.f4 {
		margin-top: 0 !important;
	}

	@media (width >= 768px) {
		/* Hide "Releases" header */
		.Layout-sidebar h2 [href$='/releases'] {
			display: none;
		}

		/* Align data section with latest tag/release link #5428 */
		.Layout-sidebar .Link--muted .octicon {
			margin-right: 4px !important;
		}
	}

	/*
	 * Hide "+ 65 releases" link
	 * Hide "Learn more about GitHub Sponsors" link
	 * Hide "+ 123 contributors" link
	 * Don't hide "Create new release" link #8442
	 */
	.Layout-sidebar
		.BorderGrid-cell
		> .mt-3:not(:has(> a[href$='releases/new'])) {
		display: none;
	}

	/* Hide Code of conduct links */
	.Layout-sidebar .Link--muted {
		[href$='/code-of-conduct.md' i],
		[href$='/code_of_conduct.md' i] {
			display: none;
		}
	}
}

